# f-stack

./: .code.yml  .gitignore  .gitmodules  .travis.yml  Herat.c  LICENSE  README.md  build_dpdk.sh  config.ini  env.sh  main.c  start.sh
dpdk/: .gitattributes  .gitignore  GNUmakefile  MAINTAINERS  Makefile  README  VERSION  a.txt  meson.build  meson_options.txt
dpdk/app/: Makefile  meson.build
dpdk/app/cmdline_test/: Makefile  cmdline_test.c  cmdline_test.h  cmdline_test.py  cmdline_test_data.py  commands.c
dpdk/app/dumpcap/: main.c  meson.build
dpdk/app/graph/: cli.c  cli.h  conn.c  conn.h  ethdev.c  ethdev.h  ethdev_priv.h  ethdev_rx.c  ethdev_rx.h  ethdev_rx_priv.h  graph.c  graph.h  graph_priv.h  ip4_route.c  ip6_route.c  l3fwd.c  l3fwd.h  main.c  mempool.c  mempool.h  mempool_priv.h  meson.build  module_api.h  neigh.c  neigh.h  neigh_priv.h  route.h  route_priv.h  utils.c  utils.h
dpdk/app/pdump/: Makefile  main.c  meson.build
dpdk/app/proc-info/: Makefile  main.c  meson.build
dpdk/app/proc_info/: Makefile  main.c
dpdk/app/test-acl/: Makefile  main.c  meson.build  test-acl.sh
dpdk/app/test-bbdev/: Makefile  ldpc_dec_default.data  ldpc_enc_default.data  main.c  main.h  meson.build  test-bbdev.py  test_bbdev.c  test_bbdev_perf.c  test_bbdev_vector.c  test_bbdev_vector.h  turbo_dec_default.data  turbo_enc_default.data
dpdk/app/test-cmdline/: cmdline_test.c  cmdline_test.h  cmdline_test.py  cmdline_test_data.py  commands.c  meson.build
dpdk/app/test-compress-perf/: Makefile  comp_perf.h  comp_perf_options.h  comp_perf_options_parse.c  comp_perf_test_benchmark.c  comp_perf_test_benchmark.h  comp_perf_test_common.c  comp_perf_test_common.h  comp_perf_test_cyclecount.c  comp_perf_test_cyclecount.h  comp_perf_test_throughput.c  comp_perf_test_throughput.h  comp_perf_test_verify.c  comp_perf_test_verify.h  main.c  meson.build
dpdk/app/test-crypto-perf/: Makefile  cperf.h  cperf_ops.c  cperf_ops.h  cperf_options.h  cperf_options_parsing.c  cperf_test_common.c  cperf_test_common.h  cperf_test_latency.c  cperf_test_latency.h  cperf_test_pmd_cyclecount.c  cperf_test_pmd_cyclecount.h  cperf_test_throughput.c  cperf_test_throughput.h  cperf_test_vector_parsing.c  cperf_test_vector_parsing.h  cperf_test_vectors.c  main.c  (+5 more)
dpdk/buildtools/: Makefile  auto-config-h.sh  binutils-avx512-check.sh  call-sphinx-build.py  check-experimental-syms.sh  check-symbols.sh  coff.py  dpdk-cmdline-gen.py  gen-build-mk.sh  gen-config-h.sh  gen-pmdinfo-cfile.py  gen-pmdinfo-cfile.sh  get-cpu-count.py  get-numa-count.py  get-test-suites.py  list-dir-globs.py  map-list-symbol.sh  map_to_def.py  map_to_win.py  meson.build  options-ibverbs-static.sh  pmdinfogen.py  relpath.sh  symlink-drivers-solibs.py  symlink-drivers-solibs.sh
dpdk/config/: common_armv8a_linux  common_armv8a_linuxapp  common_base  common_bsdapp  common_freebsd  common_linux  common_linuxapp  defconfig_arm-armv7a-linux-gcc  defconfig_arm-armv7a-linuxapp-gcc  defconfig_arm64-armada-linux-gcc  defconfig_arm64-armada-linuxapp-gcc  defconfig_arm64-armv8a-linux-clang  defconfig_arm64-armv8a-linux-gcc  defconfig_arm64-armv8a-linuxapp-clang  defconfig_arm64-armv8a-linuxapp-gcc  defconfig_arm64-bluefield-linux-gcc  defconfig_arm64-bluefield-linuxapp-gcc  defconfig_arm64-dpaa-linux-gcc  defconfig_arm64-dpaa-linuxapp-gcc  defconfig_arm64-dpaa2-linuxapp-gcc  defconfig_arm64-emag-linux-gcc  defconfig_arm64-emag-linuxapp-gcc  defconfig_arm64-graviton2-linux-gcc  defconfig_arm64-graviton2-linuxapp-gcc  defconfig_arm64-n1sdp-linux-gcc  defconfig_arm64-n1sdp-linuxapp-gcc  defconfig_arm64-octeontx2-linux-gcc  defconfig_arm64-octeontx2-linuxapp-gcc  defconfig_arm64-stingray-linux-gcc  defconfig_arm64-stingray-linuxapp-gcc  defconfig_arm64-thunderx-linux-gcc  defconfig_arm64-thunderx-linuxapp-gcc  defconfig_arm64-thunderx2-linux-gcc  defconfig_arm64-thunderx2-linuxapp-gcc  defconfig_arm64-xgene1-linux-gcc  defconfig_arm64-xgene1-linuxapp-gcc  defconfig_i686-native-linux-gcc  defconfig_i686-native-linux-icc  defconfig_i686-native-linuxapp-gcc  defconfig_i686-native-linuxapp-icc  (+19 more)
dpdk/devtools/: build-dict.sh  build-tags.sh  check-abi-version.sh  check-abi.sh  check-doc-vs-code.sh  check-dup-includes.sh  check-forbidden-tokens.awk  check-git-log.sh  check-includes.sh  check-maintainers.sh  check-meson.py  check-spdx-tag.sh  check-symbol-change.sh  check-symbol-maps.sh  checkpatches.sh  cocci.sh  dts-check-format.sh  gen-abi.sh  get-maintainer.sh  git-log-fixes.sh  libabigail.abignore  load-devel-config  parse-flow-support.sh  process-iwyu.py  test-build.sh  test-meson-builds.sh  test-null.sh  update-abi.sh  update-patches.py  update_version_map_abi.py  validate-abi.sh  words-case.txt
dpdk/doc/: build-sdk-meson.txt  build-sdk-quick.txt  meson.build
dpdk/drivers/: Makefile  meson.build  version.map
dpdk/dts/: conf.yaml  main.py  pyproject.toml
dpdk/examples/: Makefile  meson.build
dpdk/kernel/: Makefile  meson.build
dpdk/lib/: Makefile  meson.build
dpdk/license/: README  bsd-2-clause.txt  exceptions.txt  isc.txt  mit.txt
dpdk/mk/: rte.app.mk  rte.bsdmodule.mk  rte.combinedlib.mk  rte.cpuflags.mk  rte.extapp.mk  rte.extlib.mk  rte.extobj.mk  rte.extshared.mk  rte.extsubdir.mk  rte.gnuconfigure.mk  rte.helper.mk  rte.hostapp.mk  rte.hostlib.mk  rte.install.mk  rte.lib.mk  rte.module.mk  rte.obj.mk  rte.sdkbuild.mk  rte.sdkconfig.mk  rte.sdkdepdirs.mk  rte.sdkdoc.mk  rte.sdkexamples.mk  rte.sdkgcov.mk  rte.sdkinstall.mk  rte.sdkroot.mk  rte.sdktest.mk  rte.shared.mk  rte.subdir.mk  rte.vars.mk
dpdk/pkg/: dpdk.spec
dpdk/scripts/: auto-config-h.sh  check-git-log.sh  check-maintainers.sh  checkpatches.sh  cocci.sh  depdirs-rule.sh  gen-build-mk.sh  gen-config-h.sh  load-devel-config.sh  relpath.sh  test-build.sh  test-null.sh  validate-abi.sh
dpdk/test/: Makefile  meson.build
dpdk/tools/: cpu_layout.py  dpdk-devbind.py  dpdk-pmdinfo.py  dpdk-setup.sh
dpdk/usertools/: cpu_layout.py  dpdk-devbind.py  dpdk-hugepages.py  dpdk-pmdinfo.py  dpdk-rss-flows.py  dpdk-setup.sh  dpdk-telemetry-client.py  dpdk-telemetry.py  meson.build
(+9490 files in other folders)
